Added Bram's AndroidWear code changes (not working!)

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -24,19 +24,19 @@
   <string name="UpdateDialogTitleTxt">Vielen Dank für die Nutzung des Updates von OpenSeizureDetector</string>
   <string name="FirstRunDlgTitle">Willkommen bei OpenSeizureDetector</string>
   <string name="ask_for_error_log">Entschuldigung, OpenSeizureDetector ist abgestuertzt.  Bitte senden Sie diese Log-Datei an uns, damit wir herausfinden koennen was passiert ist und es reparieren können.\nVielen Dank, Graham.</string>
-  <string name="email_welcome_note">Lieber Nutzer von OpenseizureDetector, die Anwendung ist gerade abgestürzt. Das anhängende Fehler-Protokoll enthält gegebenfalls detailliertere Informationen.\n\n\n</string>
+  <string name="email_welcome_note">Lieber Nutzer von OpenseizureDetector, die Anwendung ist gerade abgestürzt. Das anhängende Fehler-Protokoll enthält gegebenenfalls detailliertere Informationen.\n\n\n</string>
   <string name="copyright_info">OpenSeizureDetector (Using UCE Handler\nCopyright Â© 2018 Rohit Sahebrao Surwase.)</string>
   <string name="SmsPermissionWarning">Problem mit SMS-Berechtigungen</string>
   <string name="AppPermissionsOk">App Berechtigung OK</string>
   <string name="AppPermissionsWarning">Problem mit App Berechtigung</string>
   <string name="BoundToServiceOk">Mit Service verbunden, OK</string>
-  <string name="BindingToService">Verbindung mit Hintergrund-Service...</string>
+  <string name="BindingToService">Verbindung mit Hintergrund-Service…</string>
   <string name="WatchConnectedOk">Smartwatch verbunden OK</string>
   <string name="WatchNotConnected">Smartwatch NICHT verbunden</string>
   <string name="SeizureDetectorDataReceived">Anfall-Detector Daten empfangen OK</string>
-  <string name="WaitingForSeizureDetectorData">Warten auf Anfall-Detector Daten...</string>
+  <string name="WaitingForSeizureDetectorData">Warten auf Anfall-Detector Daten…</string>
   <string name="SeizureDetectorSettingsReceived">Anfall-Detector Einstellungen empfangen OK</string>
-  <string name="WaitingForSeizureDetectorSettings">Warte auf Anfall-Detector Einstellungen...</string>
+  <string name="WaitingForSeizureDetectorSettings">Warte auf Anfall-Detector Einstellungen…</string>
   <string name="DataSource">Daten-Quelle</string>
   <string name="AppTitleText">OpenSeizureDetector Android App Version </string>
   <string name="ServerRunningOK">Server laeuft OK\n</string>
@@ -59,7 +59,7 @@
   <string name="SMSWillBeSentIn">SMS wird versendet in </string>
   <string name="Cancel">ABBRUCH?</string>
   <string name="AcceptAlarm">Alarm annehmen</string>
-  <string name="AudibleAlarmsCancelledFor">Akustische Alarme abgeschaltet fuer </string>
+  <string name="AudibleAlarmsCancelledFor">Akustische Alarme abgeschaltet für </string>
   <string name="PressToReEnable"> Drücken um Funktion wieder zu aktivieren</string>
   <string name="CancelAudibleAlarms">Akustische Alarme abschalten (voruebergehend)</string>
   <string name="AudibleAlarmsOff">Heart Rate Max Threshold (bpm)</string>
@@ -98,7 +98,7 @@
   <string name="view_log_entries">View Log Entries</string>
   <string name="export_data">Export Data</string>
   <string name="settings">Settings</string>
-  <string name="about">About...</string>
+  <string name="about">About…</string>
     <string name="about_text">OpenSeizureDetector epileptic\n (tonic-clonic) seizure detector and \n alarm system. Uses a Pebble Smart\n watch to detect the shaking \n associated with a seizure, \n then raises audible and text\n message (SMS) alerts for carers.\n The system is free and open source - see \n http://openseizuredetector.org.uk for details. Please report any issues to graham@openseizuredetector.org.uk\n or raise an issue on the project github source code \n repository - https://github.com/OpenSeizureDetector</string>
   <string name="credits_text">Main Watch App and Android App \n copyright Graham Jones, 2015.\n The following libraries are used:\n - SYLT-FFT - https://github.com/stg/SYLT-FFT by D. Taylor.\n - NanoHTTPD - https://github.com/NanoHttpd/nanohttpd\n - jQuery - http://jquery.org\n - jBeep - http://www.ultraduz.com.br\n - Chartjs - http://www.chartjs.org\n - MPAndroidChart - https://github.com/PhilJay/MPAndroidChart\n - UCE-Handler - https://github.com/RohitSurwase/UCE-Handler\n \n The Logo is based on Star of life2 by Verdy P, \n Licensed under Public Domain via\n Wikimedia Commons (http://commons.wikimedia.org/wiki/File:Star_of_life2.svg#mediaviewer/File:Star_of_life2.svg).</string>
   <string name="edit_settings">Edit Settings</string>
