--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,13 +40,13 @@
     <string name="AppPermissionsOk">App Permissions OK</string>
     <string name="AppPermissionsWarning">Problem with App Permissions</string>
     <string name="BoundToServiceOk">Bound to Service OK</string>
-    <string name="BindingToService">Binding to Background Service...</string>
+    <string name="BindingToService">Binding to Background Service…</string>
     <string name="WatchConnectedOk">Watch Connected OK</string>
     <string name="WatchNotConnected">Watch Not Connected</string>
     <string name="SeizureDetectorDataReceived">Seizure Detector Data Received OK</string>
-    <string name="WaitingForSeizureDetectorData">Waiting for Seizure Detector Data...</string>
+    <string name="WaitingForSeizureDetectorData">Waiting for Seizure Detector Data…</string>
     <string name="SeizureDetectorSettingsReceived">Seizure Detector Settings Received OK</string>
-    <string name="WaitingForSeizureDetectorSettings">Waiting for Seizure Detector Settings...</string>
+    <string name="WaitingForSeizureDetectorSettings">Waiting for Seizure Detector Settings…</string>
     <string name="DataSource">DataSource</string>
     <string name="AppTitleText">OpenSeizureDetector Android App Version </string>
     <string name="ServerRunningOK">Server Running OK\n</string>
@@ -126,7 +126,7 @@
     <string name="view_log_entries">View Log Entries</string>
     <string name="export_data">Export Data</string>
     <string name="settings">Settings</string>
-    <string name="about">About...</string>
+    <string name="about">About…</string>
     <string name="about_text">OpenSeizureDetector epileptic\n
         (tonic-clonic) seizure detector and alarm
         system. Uses a Smart
@@ -341,7 +341,7 @@
     <string name="event_type">Event Type:</string>
     <string name="event_sub_type">"Event Sub-Type: "</string>
     <string name="selectFromOptionselow">"-- select option --"</string>
-    <string name="waitingForData">...waiting for data...</string>
+    <string name="waitingForData">…waiting for data...</string>
     <string name="refreshBtn">Refresh</string>
     <string name="back">Back</string>
     <string name="unvalidatedEventsTitle">Un-Confirmed Seizure Events</string>
@@ -438,4 +438,5 @@
     <string name="not_logged_in_dialog_title">Not Logged in to Data Sharing</string>
     <string name="not_logged_in_dialog_message">You must be logged in to the Data Sharing system to be able to report seizures.</string>
     <string name="include_warnings">Include Warnings</string>
+    <string name="notes_about_event">notes about event</string>
 </resources>
