After rebuild and update from Graham,
update has a tricky flow.
After upgrade manual "pm grant PACKAGE_NAME android.permission.POST_NOTIFICATIONS" is nessesary to make the notifications available. If not the question from the os does not appear.

Below bug report is after merge of 4.2.x
***** UCE HANDLER Library
***** by Rohit Surwase

***** DEVICE INFO
Brand: samsung
Device: a53x
Model: SM-A536B
Manufacturer: samsung
Product: a53xnaeea
SDK: 33
Release: 13

***** APP INFO
Version: 4.2.1a
Installed On: 2022-11-22 01:24:27
Updated On: 2023-01-29 21:47:18
Current Date: 2023-01-29 21:51:39

***** ERROR LOG
java.lang.IllegalArgumentException: uk.org.openseizuredetector: Targeting S+ (version 31 and above) requires that one of FLAG_IMMUTABLE or FLAG_MUTABLE be specified when creating a PendingIntent.
Strongly consider using FLAG_IMMUTABLE, only use FLAG_MUTABLE if some functionality depends on the PendingIntent being mutable, e.g. if it needs to be used with inline replies or bubbles.
	at android.app.PendingIntent.checkFlags(PendingIntent.java:408)
	at android.app.PendingIntent.getActivityAsUser(PendingIntent.java:491)
	at android.app.PendingIntent.getActivity(PendingIntent.java:477)
	at android.app.PendingIntent.getActivity(PendingIntent.java:441)
	at uk.org.openseizuredetector.SdServer.showNotification(SdServer.java:512)
	at uk.org.openseizuredetector.SdServer.onSdDataFault(SdServer.java:804)
	at uk.org.openseizuredetector.SdDataSource.getStatus(SdDataSource.java:716)
	at uk.org.openseizuredetector.SdDataSource$1.run(SdDataSource.java:154)
	at java.util.TimerThread.mainLoop(Timer.java:563)
	at java.util.TimerThread.run(Timer.java:513)

***** END OF LOG *****

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,6 +195,7 @@
     <string name="wearer_id_title">Wearer ID of the person wearing the watch (from OSD Web API)</string>
     <string name="remote_url_summary">URL for remote data logging.</string>
     <string name="remote_url_title">Remote URL</string>
+    <string name="notes_about_event">Notes about event</string>
     <string name="prevent_sleep_summary">Prevent the screen from blanking while the application is running.</string>
     <string name="prevent_sleep_title">Prevent the screen from blanking.</string>
     <string name="data_update_period_summary">Display update period in miliseconds.</string>
